# lib_dzne_data

./: .gitignore  LICENSE.txt  README.md  README.rst  pyproject.toml
src/lib_dzne_data/: Manager.py  __init__.py  __main__.py  functions.py
