[build-system]
requires = [
    "setuptools>=61.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lib_dzne_data"
version = "0.0.0"
description = "lib_dzne_data"
readme = "README.rst"
authors = [
    { name = "Johannes", email = "johannes-programming@posteo.org" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = []
requires-python = ">=3.11"

[project.license]
file = "LICENSE.txt"

[project.urls]
Download = "https://pypi.org/project/lib-dzne-data/#files"
Source = "https://github.com/johannes-programming/lib_dzne_data"

