[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"


[project]
name = "lib-dzne-data"
version = "0.3.0"
description = "Libary for handling data. "
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Johannes Horler", email = "johannes.horler@dzne.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    'lib-dzne-filedata>=0.5.0',
    'lib-dzne-math>=0.2.3',
]
requires-python = ">=3.11"

